apps/kubernetes/k3s/apps/vaultwarden/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden
  namespace: vaultwarden
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vaultwarden.hughboi.cc`)
      kind: Rule
      services:
        - name: vaultwarden
          port: 80
  tls:
    secretName: hughboi-tls
